[package]
edition = "2024"
name = "libimage"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = {version="0.3.77"}
wasm-bindgen = {version="0.2.100"}

# mpic = { path = "../../mpic" }
mpic = {git = "https://github.com/neri/mpic"}
rapid-qoi = {version="0.6.1"}
png = {version="0.17.16"}
pixel_scale_detector = { git = "https://github.com/neri/pixel-scale-detector.git" }
# pixel_scale_detector = {path = "../../pixel-scale-detector"}

[dependencies.web-sys]
version = "0.3.77"
features = [
  "ImageData",
  "CanvasRenderingContext2d",
]
